Unreviewed, non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=236577

Source/JavaScriptCore:

* heap/StructureAlignedMemoryAllocator.cpp: Add missing include.

Source/WebCore:

* Modules/notifications/NotificationEvent.cpp: Missing include.
* platform/graphics/ContentTypeUtilities.cpp: Namespace function.
(WebCore::contentTypeMeetsContainerAndCodecTypeRequirements):
* workers/service/ServiceWorkerGlobalScope.cpp: Missing include.

Source/WebKit:

* UIProcess/Notifications/ServiceWorkerNotificationHandler.h: Forward
declare.
* UIProcess/WebProcessProxy.cpp: Missing include.



Canonical link: https://commits.webkit.org/247211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289726 268f45cc-cd09-0410-ab3c-d52691b4dbfc